fix(shell): Improve filled button's visibility

--- a/packages/shell/src/styles.css
+++ b/packages/shell/src/styles.css
@@ -149,7 +149,7 @@ shell-loading {
 }
 .button-active {
   background-color: var(--theme-primary);
-  color: var(--theme-fg);
+  color: var(--theme-primary-contrast);
 }
 
 /* === Error Module === */
